--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,18 @@ body{
   color:var(--cor-texto) ;
 }
 
+.cabecalho{
+  text-align: center;
+}
+
+.cabecalho img{
+  margin: 0 auto;
+  padding-top: 2em;
+  width: 150px;
+  height: 220px;
+  border-radius: 25px;
+}
+
 .cabecalho__titulo{
   padding: 2em;
   text-align: center;
@@ -24,6 +36,7 @@ body{
 .button{ 
   text-align: center;
   border: none;
+  padding-top: 2em;
 }
 
 .titulo__botao{ 
@@ -40,47 +53,4 @@ body{
   border-radius: 2em;
   text-align: center;
   display: block;
-}
-
-.image-container {
-  display: flex;
-  justify-content: center; 
-  align-items: center; 
-}
-
-img {
-  margin: 10px;
-}
-
-.carousel {
-  overflow-x: auto; 
-  white-space: nowrap;
-  scroll-behavior: smooth; 
-}
-
-.carousel-inner {
-  display: flex;
-  transition: transform 0.5s ease-in-out;
-}
-
-.carousel-controls {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    text-align: center;
-    padding: 10px;
-  }
-
-
-.carousel-indicators {
-  position: absolute;
-  bottom: 10px;
-  width: 100%;
-  text-align: center;
-}
-
-@media (max-width: 768px) {
-  .carousel-inner img {
-    width: 50%; 
-  }
 }
